<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4018.2">
  <POU Name="SerialCOMTask" Id="{f7bab653-2970-4b85-b4dd-29d16a084045}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM SerialCOMTask
VAR

    (* background communication with the EL6001 terminal *)
    fbEL6001Ctrl       : SerialLineControl;
    bEL6001CtrlError   : BOOL;
    eEL6001CtrlErrorID : ComError_t;

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*
	The SerialLineControl function block is supposed to be called in every PLC cycle.
	It communicates with the serial line hardware device and transmits or receives data.
	The SerialLineControl can be called in the standard task or in a separate fast task as well.
	A fast separate task will be necessary at high baud rates or 
	with KL6001 terminals which have a small process image (3 or 5 data bytes only)
*)
(* background communication with the EL6001 terminal *)
fbEL6001Ctrl(
   Mode:= SERIALLINEMODE_EL6_22B, 
   pComIn:= ADR(stIn_EL6001), 
   pComOut:= ADR(stOut_EL6001), 
   SizeComIn:= SIZEOF(stIn_EL6001), 
   Error=> bEL6001CtrlError, 
   ErrorID=> eEL6001CtrlErrorID, 
   TxBuffer:= TxBufferEL, 
   RxBuffer:= RxBufferEL );

]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>